# ALPR-OpenCV

./: .gitignore  CMakeLists.txt  Makefile  README.md  reader.cpp
